# hirelatam_assesment_2026_04

./: .env.example  .gitignore  CLAUDE.md  Makefile  PHASES.md  PLAN.md  README.md  dashboard.py  notes.txt  pyproject.toml  run_agent.py  run_dm_drafts.py  run_enrichment.py
data/: db.sqlite
data/seed/: mock_crunchbase.json  mock_linkedin.json  mock_x.json  mock_yc.json
docs/: launch_definition.md  manual_test.md
evals/: README.md  launch_classifier.jsonl  run_classifier.py
prompts/: dm_draft.md  enrichment.md  launch_classifier.md  mock_generator.md  orchestrator.md
src/agent/: dm_tools.py  enrichment_tools.py  logger.py  orchestrator.py  thresholds.py  tools.py
src/classifier/: __init__.py  classify.py  prompt.py  schema.py
src/dashboard/: queries.py  run_log.py
src/db/: __init__.py  init.py  repo.py  schema.sql
src/models/: __init__.py  domain.py
src/sources/: mock_generator.py  mocks.py  producthunt.py
tests/: conftest.py  test_agent_tools.py  test_classifier.py  test_dashboard_queries.py  test_dashboard_run_log.py  test_dm_tools.py  test_enrichment_tools.py  test_mocks.py  test_orchestrator.py  test_producthunt.py  test_repo.py
tests/fixtures/: ph_sample.json
